--- a/archives/toutiao-search/2023-10-19.md
+++ b/archives/toutiao-search/2023-10-19.md
@@ -1,59 +1,82 @@
 # 2023-10-19
 
-共 133 条
+共 155 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 19 2023 11:00:43 GMT+0800 (China Standard Time) -->
-1. [合肥：宠物狗出门不拴绳一律捕捉](https://so.toutiao.com/search?keyword=合肥：宠物狗出门不拴绳一律捕捉)
-1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
-1. [全国秋粮收获已过七成](https://so.toutiao.com/search?keyword=全国秋粮收获已过七成)
-1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
+<!-- 最后更新时间 Thu Oct 19 2023 12:00:41 GMT+0800 (China Standard Time) -->
 1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
+1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
+1. [前三季度国民经济持续恢复向好](https://so.toutiao.com/search?keyword=前三季度国民经济持续恢复向好)
+1. [合肥：宠物狗出门不拴绳一律捕捉](https://so.toutiao.com/search?keyword=合肥：宠物狗出门不拴绳一律捕捉)
+1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
 1. [碧桂园辟谣“创始人父女或已离境”](https://so.toutiao.com/search?keyword=碧桂园辟谣“创始人父女或已离境”)
 1. [以军完成对加沙地面进攻准备工作](https://so.toutiao.com/search?keyword=以军完成对加沙地面进攻准备工作)
-1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
-1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
-1. [堪比打印机 食堂大叔手写每周菜单](https://so.toutiao.com/search?keyword=堪比打印机+食堂大叔手写每周菜单)
-1. [外媒：以色列因战争损失超10亿美元](https://so.toutiao.com/search?keyword=外媒：以色列因战争损失超10亿美元)
-1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
-1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
+1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
 1. [以色列要求本国公民立即离开土耳其](https://so.toutiao.com/search?keyword=以色列要求本国公民立即离开土耳其)
-1. [合肥市区有野猪横穿马路被撞身亡](https://so.toutiao.com/search?keyword=合肥市区有野猪横穿马路被撞身亡)
+1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
+1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
+1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
+1. [郭台铭深夜发文庆生自曝参选心情](https://so.toutiao.com/search?keyword=郭台铭深夜发文庆生自曝参选心情)
+1. [食堂大叔手写菜单堪比打印机](https://so.toutiao.com/search?keyword=食堂大叔手写菜单堪比打印机)
+1. [科技公司独立造车为何难以成功](https://so.toutiao.com/search?keyword=科技公司独立造车为何难以成功)
+1. [宠物狗未拴绳被撞死亡司机要赔偿吗](https://so.toutiao.com/search?keyword=宠物狗未拴绳被撞死亡司机要赔偿吗)
 1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
 1. [美国向乌运送战术导弹系统 俄回应](https://so.toutiao.com/search?keyword=美国向乌运送战术导弹系统+俄回应)
-1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
-1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
-1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
+1. [媒体：加沙医院遭袭重创拜登中东行](https://so.toutiao.com/search?keyword=媒体：加沙医院遭袭重创拜登中东行)
+1. [拜登嘲讽哈马斯需学会准确射击](https://so.toutiao.com/search?keyword=拜登嘲讽哈马斯需学会准确射击)
 1. [广州一宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=广州一宝马与出租相撞侧翻起火)
+1. [安徽亳州发现未拴绳犬只直接捕捉](https://so.toutiao.com/search?keyword=安徽亳州发现未拴绳犬只直接捕捉)
+1. [中国前三季度经济呈现出结构性改善](https://so.toutiao.com/search?keyword=中国前三季度经济呈现出结构性改善)
+1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
+1. [保安劝阻游客踩花被骂](https://so.toutiao.com/search?keyword=保安劝阻游客踩花被骂)
+1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
+1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
+1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
+1. [普京：加沙医院遭袭是“悲剧”](https://so.toutiao.com/search?keyword=普京：加沙医院遭袭是“悲剧”)
+1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
+1. [美国续发130亿美元20年期国债](https://so.toutiao.com/search?keyword=美国续发130亿美元20年期国债)
 1. [两车碰撞自燃路过环卫帮忙灭火](https://so.toutiao.com/search?keyword=两车碰撞自燃路过环卫帮忙灭火)
+1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
+1. [马凯硕：在东南亚 印度远不及中国](https://so.toutiao.com/search?keyword=马凯硕：在东南亚+印度远不及中国)
+1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
+1. [中国所持美国国债连续第五个月下降](https://so.toutiao.com/search?keyword=中国所持美国国债连续第五个月下降)
+1. [邱毅：朱侯让国民党穷途末路了吗](https://so.toutiao.com/search?keyword=邱毅：朱侯让国民党穷途末路了吗)
+1. [苏州禁养这38种烈性犬](https://so.toutiao.com/search?keyword=苏州禁养这38种烈性犬)
+1. [女子牵大型犬吓到小孩 家长欲砸狗](https://so.toutiao.com/search?keyword=女子牵大型犬吓到小孩+家长欲砸狗)
+1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
+1. [男子电梯蹦跳被劝阻怒怼：想斗狠吗](https://so.toutiao.com/search?keyword=男子电梯蹦跳被劝阻怒怼：想斗狠吗)
+1. [黄果树景区通报游客拍照被大妈阻拦](https://so.toutiao.com/search?keyword=黄果树景区通报游客拍照被大妈阻拦)
+1. [iPhone15首销数据不及14](https://so.toutiao.com/search?keyword=iPhone15首销数据不及14)
+1. [亚航CEO晒照“边接受按摩边开会”](https://so.toutiao.com/search?keyword=亚航CEO晒照“边接受按摩边开会”)
+1. [男子两次在女厕放置摄像设备被抓获](https://so.toutiao.com/search?keyword=男子两次在女厕放置摄像设备被抓获)
+1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
+1. [欣旺达：暂未给赛力斯提供动力电池](https://so.toutiao.com/search?keyword=欣旺达：暂未给赛力斯提供动力电池)
+1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
+1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
+1. [女儿去老年大学接爸爸放学](https://so.toutiao.com/search?keyword=女儿去老年大学接爸爸放学)
+1. [全国秋粮收获已过七成](https://so.toutiao.com/search?keyword=全国秋粮收获已过七成)
+1. [堪比打印机 食堂大叔手写每周菜单](https://so.toutiao.com/search?keyword=堪比打印机+食堂大叔手写每周菜单)
+1. [外媒：以色列因战争损失超10亿美元](https://so.toutiao.com/search?keyword=外媒：以色列因战争损失超10亿美元)
+1. [曝威马仅剩817人 已停发工资4个月](https://so.toutiao.com/search?keyword=曝威马仅剩817人+已停发工资4个月)
+1. [合肥市区有野猪横穿马路被撞身亡](https://so.toutiao.com/search?keyword=合肥市区有野猪横穿马路被撞身亡)
 1. [云南一商城电梯坠落致3死17伤](https://so.toutiao.com/search?keyword=云南一商城电梯坠落致3死17伤)
 1. [塞尔维亚前总统谈“一带一路”倡议](https://so.toutiao.com/search?keyword=塞尔维亚前总统谈“一带一路”倡议)
 1. [碧桂园创始人杨国强再露面](https://so.toutiao.com/search?keyword=碧桂园创始人杨国强再露面)
 1. [云南坠落电梯是否超载？商户发声](https://so.toutiao.com/search?keyword=云南坠落电梯是否超载？商户发声)
-1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
-1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
 1. [美大使演讲时众多与会者背过身抗议](https://so.toutiao.com/search?keyword=美大使演讲时众多与会者背过身抗议)
 1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
 1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
-1. [黄果树景区通报游客拍照被大妈阻拦](https://so.toutiao.com/search?keyword=黄果树景区通报游客拍照被大妈阻拦)
 1. [台风“三巴”在海南东方沿海登陆](https://so.toutiao.com/search?keyword=台风“三巴”在海南东方沿海登陆)
 1. [“跳河者”的网事和往事](https://so.toutiao.com/search?keyword=“跳河者”的网事和往事)
 1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
-1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
-1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
 1. [内马尔前十字韧带和半月板撕裂](https://so.toutiao.com/search?keyword=内马尔前十字韧带和半月板撕裂)
 1. [男子回家邻居孩子冲出来叫爸爸](https://so.toutiao.com/search?keyword=男子回家邻居孩子冲出来叫爸爸)
-1. [宠物狗未拴绳被撞死亡司机要赔偿吗](https://so.toutiao.com/search?keyword=宠物狗未拴绳被撞死亡司机要赔偿吗)
 1. [考上公职的90后：工作3个月就贪污](https://so.toutiao.com/search?keyword=考上公职的90后：工作3个月就贪污)
 1. [塞尔维亚总统和财长凌晨一起看球赛](https://so.toutiao.com/search?keyword=塞尔维亚总统和财长凌晨一起看球赛)
-1. [男子两次在女厕放置摄像设备被抓获](https://so.toutiao.com/search?keyword=男子两次在女厕放置摄像设备被抓获)
 1. [中央气象台发布大风黄色预警](https://so.toutiao.com/search?keyword=中央气象台发布大风黄色预警)
-1. [马凯硕：在东南亚 印度远不及中国](https://so.toutiao.com/search?keyword=马凯硕：在东南亚+印度远不及中国)
 1. [电影《刀尖》定档11月24日](https://so.toutiao.com/search?keyword=电影《刀尖》定档11月24日)
-1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
 1. [加沙地带一所学校遭袭 有人员伤亡](https://so.toutiao.com/search?keyword=加沙地带一所学校遭袭+有人员伤亡)
 1. [支原体肺炎和支气管肺炎有何区别](https://so.toutiao.com/search?keyword=支原体肺炎和支气管肺炎有何区别)
-1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
 1. [普京访华的安保级别有多高](https://so.toutiao.com/search?keyword=普京访华的安保级别有多高)
 1. [又一象棋大师举报“棋坛乱象”](https://so.toutiao.com/search?keyword=又一象棋大师举报“棋坛乱象”)
 1. [各国记者“堆成山”抓拍普京出场](https://so.toutiao.com/search?keyword=各国记者“堆成山”抓拍普京出场)
@@ -112,7 +135,6 @@
 1. [煮饺子要不要加凉水](https://so.toutiao.com/search?keyword=煮饺子要不要加凉水)
 1. [媒体评海底捞等位区分i人e人](https://so.toutiao.com/search?keyword=媒体评海底捞等位区分i人e人)
 1. [国家统计局：物价保持温和增长](https://so.toutiao.com/search?keyword=国家统计局：物价保持温和增长)
-1. [苏州禁养这38种烈性犬](https://so.toutiao.com/search?keyword=苏州禁养这38种烈性犬)
 1. [胡锡进总浮亏首次突破3万元](https://so.toutiao.com/search?keyword=胡锡进总浮亏首次突破3万元)
 1. [王祖贤南京游玩被偶遇](https://so.toutiao.com/search?keyword=王祖贤南京游玩被偶遇)
 1. [加沙医院被空袭引发愤怒 拜登发声](https://so.toutiao.com/search?keyword=加沙医院被空袭引发愤怒+拜登发声)
