--- a/archives/toutiao-search/2023-10-19.md
+++ b/archives/toutiao-search/2023-10-19.md
@@ -1,54 +1,79 @@
 # 2023-10-19
 
-共 169 条
+共 191 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 19 2023 13:00:41 GMT+0800 (China Standard Time) -->
-1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
-1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
+<!-- 最后更新时间 Thu Oct 19 2023 14:00:39 GMT+0800 (China Standard Time) -->
+1. [宝马与出租相撞 目击者：两车斗气](https://so.toutiao.com/search?keyword=宝马与出租相撞+目击者：两车斗气)
+1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
 1. [前三季度国民经济持续恢复向好](https://so.toutiao.com/search?keyword=前三季度国民经济持续恢复向好)
+1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
+1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
+1. [上海失踪女童遗体发现：排除刑案](https://so.toutiao.com/search?keyword=上海失踪女童遗体发现：排除刑案)
+1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
+1. [中国9月从日本进口水产品已“归零”](https://so.toutiao.com/search?keyword=中国9月从日本进口水产品已“归零”)
+1. [碧桂园辟谣创始人父女已离境](https://so.toutiao.com/search?keyword=碧桂园辟谣创始人父女已离境)
+1. [日前首相：日本应加入亚投行](https://so.toutiao.com/search?keyword=日前首相：日本应加入亚投行)
+1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
+1. [女子遛狗不牵绳：不咬人凭什么拴](https://so.toutiao.com/search?keyword=女子遛狗不牵绳：不咬人凭什么拴)
+1. [今年支原体肺炎“来势汹汹”](https://so.toutiao.com/search?keyword=今年支原体肺炎“来势汹汹”)
+1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
+1. [海鲜市场现6两“鬼秤” 官方回应](https://so.toutiao.com/search?keyword=海鲜市场现6两“鬼秤”+官方回应)
+1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
+1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
+1. [济南回应突发不明巨响](https://so.toutiao.com/search?keyword=济南回应突发不明巨响)
+1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
+1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
+1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
+1. [英国首相苏纳克将访问以色列](https://so.toutiao.com/search?keyword=英国首相苏纳克将访问以色列)
+1. [感染肺炎支原体后有哪些症状](https://so.toutiao.com/search?keyword=感染肺炎支原体后有哪些症状)
+1. [官方回应宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=官方回应宝马与出租相撞侧翻起火)
+1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
+1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
 1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
+1. [男子电梯蹦跳被劝阻怒怼：想斗狠吗](https://so.toutiao.com/search?keyword=男子电梯蹦跳被劝阻怒怼：想斗狠吗)
+1. [伊拉克一组织称对美军基地遭袭负责](https://so.toutiao.com/search?keyword=伊拉克一组织称对美军基地遭袭负责)
+1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
+1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
+1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
+1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
+1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
+1. [拜登：美国将继续支持以色列](https://so.toutiao.com/search?keyword=拜登：美国将继续支持以色列)
+1. [问界新M7行情持续试驾火热](https://so.toutiao.com/search?keyword=问界新M7行情持续试驾火热)
+1. [拜登与埃及总统通电话讨论加沙局势](https://so.toutiao.com/search?keyword=拜登与埃及总统通电话讨论加沙局势)
+1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
+1. [食堂大叔手写菜单堪比打印机](https://so.toutiao.com/search?keyword=食堂大叔手写菜单堪比打印机)
+1. [沙特外交大臣会见伊朗外长](https://so.toutiao.com/search?keyword=沙特外交大臣会见伊朗外长)
+1. [马凯硕：在东南亚 印度远不及中国](https://so.toutiao.com/search?keyword=马凯硕：在东南亚+印度远不及中国)
+1. [美称有无人机试图攻击在伊拉克美军](https://so.toutiao.com/search?keyword=美称有无人机试图攻击在伊拉克美军)
+1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
+1. [发展中国家为何青睐“一带一路”](https://so.toutiao.com/search?keyword=发展中国家为何青睐“一带一路”)
+1. [伊朗外长呼吁全面制裁以色列](https://so.toutiao.com/search?keyword=伊朗外长呼吁全面制裁以色列)
+1. [倒刺伤害到底有多“深”](https://so.toutiao.com/search?keyword=倒刺伤害到底有多“深”)
+1. [安徽亳州发现未拴绳犬只直接捕捉](https://so.toutiao.com/search?keyword=安徽亳州发现未拴绳犬只直接捕捉)
+1. [阿奇霉素缺货？药房药企回应](https://so.toutiao.com/search?keyword=阿奇霉素缺货？药房药企回应)
+1. [曝王思聪买了一辆理想L9](https://so.toutiao.com/search?keyword=曝王思聪买了一辆理想L9)
+1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
+1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
 1. [宠物狗未拴绳被撞死亡司机要赔偿吗](https://so.toutiao.com/search?keyword=宠物狗未拴绳被撞死亡司机要赔偿吗)
 1. [巴以冲突已致双方超4900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4900人死亡)
 1. [以色列要求本国公民立即离开土耳其](https://so.toutiao.com/search?keyword=以色列要求本国公民立即离开土耳其)
-1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
-1. [碧桂园辟谣创始人父女已离境](https://so.toutiao.com/search?keyword=碧桂园辟谣创始人父女已离境)
 1. [遛狗未牵绳狗腿被压断 司机遭掌掴](https://so.toutiao.com/search?keyword=遛狗未牵绳狗腿被压断+司机遭掌掴)
-1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
 1. [美国大学生在巴以问题上对立加剧](https://so.toutiao.com/search?keyword=美国大学生在巴以问题上对立加剧)
-1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
-1. [食堂大叔手写菜单堪比打印机](https://so.toutiao.com/search?keyword=食堂大叔手写菜单堪比打印机)
-1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
-1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
 1. [大妈遛狗未牵绳被查后抱狗大哭](https://so.toutiao.com/search?keyword=大妈遛狗未牵绳被查后抱狗大哭)
-1. [中国9月从日本进口水产品已“归零”](https://so.toutiao.com/search?keyword=中国9月从日本进口水产品已“归零”)
 1. [文班亚马15分 马刺主场轻取火箭](https://so.toutiao.com/search?keyword=文班亚马15分+马刺主场轻取火箭)
-1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
 1. [广州一宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=广州一宝马与出租相撞侧翻起火)
-1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
 1. [美国向乌运送战术导弹系统 俄回应](https://so.toutiao.com/search?keyword=美国向乌运送战术导弹系统+俄回应)
 1. [问界M9静态解读 实车抢先看](https://so.toutiao.com/search?keyword=问界M9静态解读+实车抢先看)
-1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
-1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
 1. [胡锡进总浮亏首次突破3万元](https://so.toutiao.com/search?keyword=胡锡进总浮亏首次突破3万元)
-1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
-1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
 1. [智利总统博里奇试弹古琴](https://so.toutiao.com/search?keyword=智利总统博里奇试弹古琴)
-1. [男子电梯蹦跳被劝阻怒怼：想斗狠吗](https://so.toutiao.com/search?keyword=男子电梯蹦跳被劝阻怒怼：想斗狠吗)
-1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
 1. [鸠山由纪夫：日本应加入亚投行](https://so.toutiao.com/search?keyword=鸠山由纪夫：日本应加入亚投行)
-1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
 1. [男子两次在女厕放置摄像设备被抓获](https://so.toutiao.com/search?keyword=男子两次在女厕放置摄像设备被抓获)
 1. [两车碰撞自燃路过环卫帮忙灭火](https://so.toutiao.com/search?keyword=两车碰撞自燃路过环卫帮忙灭火)
 1. [贾玲回应好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=贾玲回应好莱坞翻拍《你好李焕英》)
 1. [亚航CEO晒照“边接受按摩边开会”](https://so.toutiao.com/search?keyword=亚航CEO晒照“边接受按摩边开会”)
 1. [碧桂园：1-9月累计交房约42万套](https://so.toutiao.com/search?keyword=碧桂园：1-9月累计交房约42万套)
 1. [论坛开幕前武契奇来回踱步独自思考](https://so.toutiao.com/search?keyword=论坛开幕前武契奇来回踱步独自思考)
-1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
-1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
-1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
-1. [曝王思聪买了一辆理想L9](https://so.toutiao.com/search?keyword=曝王思聪买了一辆理想L9)
-1. [安徽亳州发现未拴绳犬只直接捕捉](https://so.toutiao.com/search?keyword=安徽亳州发现未拴绳犬只直接捕捉)
 1. [黄果树景区通报游客拍照被大妈阻拦](https://so.toutiao.com/search?keyword=黄果树景区通报游客拍照被大妈阻拦)
 1. [苏州禁养这38种烈性犬](https://so.toutiao.com/search?keyword=苏州禁养这38种烈性犬)
 1. [女子牵大型犬吓到小孩 家长欲砸狗](https://so.toutiao.com/search?keyword=女子牵大型犬吓到小孩+家长欲砸狗)
@@ -65,11 +90,8 @@
 1. [保安劝阻游客踩花被骂](https://so.toutiao.com/search?keyword=保安劝阻游客踩花被骂)
 1. [普京：加沙医院遭袭是“悲剧”](https://so.toutiao.com/search?keyword=普京：加沙医院遭袭是“悲剧”)
 1. [美国续发130亿美元20年期国债](https://so.toutiao.com/search?keyword=美国续发130亿美元20年期国债)
-1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
-1. [马凯硕：在东南亚 印度远不及中国](https://so.toutiao.com/search?keyword=马凯硕：在东南亚+印度远不及中国)
 1. [中国所持美国国债连续第五个月下降](https://so.toutiao.com/search?keyword=中国所持美国国债连续第五个月下降)
 1. [邱毅：朱侯让国民党穷途末路了吗](https://so.toutiao.com/search?keyword=邱毅：朱侯让国民党穷途末路了吗)
-1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
 1. [iPhone15首销数据不及14](https://so.toutiao.com/search?keyword=iPhone15首销数据不及14)
 1. [欣旺达：暂未给赛力斯提供动力电池](https://so.toutiao.com/search?keyword=欣旺达：暂未给赛力斯提供动力电池)
 1. [女儿去老年大学接爸爸放学](https://so.toutiao.com/search?keyword=女儿去老年大学接爸爸放学)
