--- a/archives/toutiao-search/2023-10-19.md
+++ b/archives/toutiao-search/2023-10-19.md
@@ -1,59 +1,78 @@
 # 2023-10-19
 
-共 191 条
+共 207 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 19 2023 14:00:39 GMT+0800 (China Standard Time) -->
-1. [宝马与出租相撞 目击者：两车斗气](https://so.toutiao.com/search?keyword=宝马与出租相撞+目击者：两车斗气)
+<!-- 最后更新时间 Thu Oct 19 2023 15:00:44 GMT+0800 (China Standard Time) -->
+1. [官方回应宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=官方回应宝马与出租相撞侧翻起火)
 1. [日前首相：遗憾日本没参与一带一路](https://so.toutiao.com/search?keyword=日前首相：遗憾日本没参与一带一路)
 1. [前三季度国民经济持续恢复向好](https://so.toutiao.com/search?keyword=前三季度国民经济持续恢复向好)
-1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
+1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
 1. [上海失踪女童遗体发现：排除刑案](https://so.toutiao.com/search?keyword=上海失踪女童遗体发现：排除刑案)
+1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
 1. [学生模仿领导“视察” 校方回应](https://so.toutiao.com/search?keyword=学生模仿领导“视察”+校方回应)
-1. [中国9月从日本进口水产品已“归零”](https://so.toutiao.com/search?keyword=中国9月从日本进口水产品已“归零”)
 1. [碧桂园辟谣创始人父女已离境](https://so.toutiao.com/search?keyword=碧桂园辟谣创始人父女已离境)
-1. [日前首相：日本应加入亚投行](https://so.toutiao.com/search?keyword=日前首相：日本应加入亚投行)
+1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
+1. [3D还原上海女童走失过程](https://so.toutiao.com/search?keyword=3D还原上海女童走失过程)
 1. [拜登讲话用“911”提醒以色列](https://so.toutiao.com/search?keyword=拜登讲话用“911”提醒以色列)
 1. [女子遛狗不牵绳：不咬人凭什么拴](https://so.toutiao.com/search?keyword=女子遛狗不牵绳：不咬人凭什么拴)
+1. [美官员不满拜登对巴以问题态度辞职](https://so.toutiao.com/search?keyword=美官员不满拜登对巴以问题态度辞职)
+1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
+1. [曝王思聪买了一辆理想L9](https://so.toutiao.com/search?keyword=曝王思聪买了一辆理想L9)
+1. [伊朗外长呼吁全面制裁以色列](https://so.toutiao.com/search?keyword=伊朗外长呼吁全面制裁以色列)
+1. [海鲜市场现6两“鬼秤” 官方回应](https://so.toutiao.com/search?keyword=海鲜市场现6两“鬼秤”+官方回应)
+1. [发展中国家为何青睐“一带一路”](https://so.toutiao.com/search?keyword=发展中国家为何青睐“一带一路”)
+1. [好莱坞翻拍《你好李焕英》](https://so.toutiao.com/search?keyword=好莱坞翻拍《你好李焕英》)
+1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
+1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
+1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
+1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
+1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
+1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
+1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
+1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
+1. [儿童感染支原体肺炎会经历哪些阶段](https://so.toutiao.com/search?keyword=儿童感染支原体肺炎会经历哪些阶段)
+1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
+1. [俄罗斯外长与朝鲜外务相举行会晤](https://so.toutiao.com/search?keyword=俄罗斯外长与朝鲜外务相举行会晤)
+1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
+1. [拜登：美国将继续支持以色列](https://so.toutiao.com/search?keyword=拜登：美国将继续支持以色列)
+1. [9月汽车产销量均创历史同期新高](https://so.toutiao.com/search?keyword=9月汽车产销量均创历史同期新高)
+1. [浙江国祥为何成烫手山芋](https://so.toutiao.com/search?keyword=浙江国祥为何成烫手山芋)
+1. [倒刺伤害到底有多“深”](https://so.toutiao.com/search?keyword=倒刺伤害到底有多“深”)
+1. [今日油价降幅再次缩减](https://so.toutiao.com/search?keyword=今日油价降幅再次缩减)
+1. [女子小区“吃瓜”看大妈打老伴](https://so.toutiao.com/search?keyword=女子小区“吃瓜”看大妈打老伴)
+1. [我国制造业领域外资准入将全面取消](https://so.toutiao.com/search?keyword=我国制造业领域外资准入将全面取消)
+1. [余承东：AI云增强可恢复照片小细节](https://so.toutiao.com/search?keyword=余承东：AI云增强可恢复照片小细节)
+1. [肺炎支原体感染增多 如何更好防治](https://so.toutiao.com/search?keyword=肺炎支原体感染增多+如何更好防治)
+1. [媒体：世界运转的格局变了](https://so.toutiao.com/search?keyword=媒体：世界运转的格局变了)
+1. [阿娇卡点晒亲密照为皇甫圣华庆生](https://so.toutiao.com/search?keyword=阿娇卡点晒亲密照为皇甫圣华庆生)
+1. [食堂大叔手写菜单堪比打印机](https://so.toutiao.com/search?keyword=食堂大叔手写菜单堪比打印机)
+1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
+1. [乘坐雅万高铁旅客：好像坐在飞机上](https://so.toutiao.com/search?keyword=乘坐雅万高铁旅客：好像坐在飞机上)
+1. [专家：美国股市正处于历史性泡沫中](https://so.toutiao.com/search?keyword=专家：美国股市正处于历史性泡沫中)
+1. [外媒：问界会成为特斯拉的强大对手](https://so.toutiao.com/search?keyword=外媒：问界会成为特斯拉的强大对手)
+1. [王毅：日本对华认知出现明显倒退](https://so.toutiao.com/search?keyword=王毅：日本对华认知出现明显倒退)
+1. [安徽亳州发现未拴绳犬只直接捕捉](https://so.toutiao.com/search?keyword=安徽亳州发现未拴绳犬只直接捕捉)
+1. [宝马与出租相撞 目击者：两车斗气](https://so.toutiao.com/search?keyword=宝马与出租相撞+目击者：两车斗气)
+1. [中国9月从日本进口水产品已“归零”](https://so.toutiao.com/search?keyword=中国9月从日本进口水产品已“归零”)
+1. [日前首相：日本应加入亚投行](https://so.toutiao.com/search?keyword=日前首相：日本应加入亚投行)
 1. [今年支原体肺炎“来势汹汹”](https://so.toutiao.com/search?keyword=今年支原体肺炎“来势汹汹”)
 1. [男子在新疆拍到西伯利亚冷空气入侵](https://so.toutiao.com/search?keyword=男子在新疆拍到西伯利亚冷空气入侵)
-1. [海鲜市场现6两“鬼秤” 官方回应](https://so.toutiao.com/search?keyword=海鲜市场现6两“鬼秤”+官方回应)
-1. [游客天坛偶遇塞尔维亚总统夫人](https://so.toutiao.com/search?keyword=游客天坛偶遇塞尔维亚总统夫人)
-1. [拉布拉多疑似走丢咬起绳子递给路人](https://so.toutiao.com/search?keyword=拉布拉多疑似走丢咬起绳子递给路人)
 1. [济南回应突发不明巨响](https://so.toutiao.com/search?keyword=济南回应突发不明巨响)
-1. [塞尔维亚前总统：现在中国是希望](https://so.toutiao.com/search?keyword=塞尔维亚前总统：现在中国是希望)
-1. [法国前总理用中文幽默开场](https://so.toutiao.com/search?keyword=法国前总理用中文幽默开场)
-1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
 1. [英国首相苏纳克将访问以色列](https://so.toutiao.com/search?keyword=英国首相苏纳克将访问以色列)
 1. [感染肺炎支原体后有哪些症状](https://so.toutiao.com/search?keyword=感染肺炎支原体后有哪些症状)
-1. [官方回应宝马与出租相撞侧翻起火](https://so.toutiao.com/search?keyword=官方回应宝马与出租相撞侧翻起火)
-1. [江西明月山徒步失联女子遗体已找到](https://so.toutiao.com/search?keyword=江西明月山徒步失联女子遗体已找到)
-1. [美国升级AI芯片和半导体出口禁令](https://so.toutiao.com/search?keyword=美国升级AI芯片和半导体出口禁令)
-1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
 1. [男子电梯蹦跳被劝阻怒怼：想斗狠吗](https://so.toutiao.com/search?keyword=男子电梯蹦跳被劝阻怒怼：想斗狠吗)
 1. [伊拉克一组织称对美军基地遭袭负责](https://so.toutiao.com/search?keyword=伊拉克一组织称对美军基地遭袭负责)
 1. [面包车内改装吸尘器偷玉米6000斤](https://so.toutiao.com/search?keyword=面包车内改装吸尘器偷玉米6000斤)
-1. [肺炎支原体感染高发 专家提醒](https://so.toutiao.com/search?keyword=肺炎支原体感染高发+专家提醒)
-1. [刘芳菲从央视主持名单中消失](https://so.toutiao.com/search?keyword=刘芳菲从央视主持名单中消失)
-1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
 1. [埃及总统已同意开放拉法口岸](https://so.toutiao.com/search?keyword=埃及总统已同意开放拉法口岸)
-1. [拜登：美国将继续支持以色列](https://so.toutiao.com/search?keyword=拜登：美国将继续支持以色列)
 1. [问界新M7行情持续试驾火热](https://so.toutiao.com/search?keyword=问界新M7行情持续试驾火热)
 1. [拜登与埃及总统通电话讨论加沙局势](https://so.toutiao.com/search?keyword=拜登与埃及总统通电话讨论加沙局势)
-1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
-1. [食堂大叔手写菜单堪比打印机](https://so.toutiao.com/search?keyword=食堂大叔手写菜单堪比打印机)
 1. [沙特外交大臣会见伊朗外长](https://so.toutiao.com/search?keyword=沙特外交大臣会见伊朗外长)
 1. [马凯硕：在东南亚 印度远不及中国](https://so.toutiao.com/search?keyword=马凯硕：在东南亚+印度远不及中国)
 1. [美称有无人机试图攻击在伊拉克美军](https://so.toutiao.com/search?keyword=美称有无人机试图攻击在伊拉克美军)
 1. [华为近期为何接连找明星代言](https://so.toutiao.com/search?keyword=华为近期为何接连找明星代言)
-1. [发展中国家为何青睐“一带一路”](https://so.toutiao.com/search?keyword=发展中国家为何青睐“一带一路”)
-1. [伊朗外长呼吁全面制裁以色列](https://so.toutiao.com/search?keyword=伊朗外长呼吁全面制裁以色列)
-1. [倒刺伤害到底有多“深”](https://so.toutiao.com/search?keyword=倒刺伤害到底有多“深”)
-1. [安徽亳州发现未拴绳犬只直接捕捉](https://so.toutiao.com/search?keyword=安徽亳州发现未拴绳犬只直接捕捉)
 1. [阿奇霉素缺货？药房药企回应](https://so.toutiao.com/search?keyword=阿奇霉素缺货？药房药企回应)
-1. [曝王思聪买了一辆理想L9](https://so.toutiao.com/search?keyword=曝王思聪买了一辆理想L9)
-1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
 1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
 1. [宠物狗未拴绳被撞死亡司机要赔偿吗](https://so.toutiao.com/search?keyword=宠物狗未拴绳被撞死亡司机要赔偿吗)
 1. [巴以冲突已致双方超4900人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4900人死亡)
@@ -78,7 +97,6 @@
 1. [苏州禁养这38种烈性犬](https://so.toutiao.com/search?keyword=苏州禁养这38种烈性犬)
 1. [女子牵大型犬吓到小孩 家长欲砸狗](https://so.toutiao.com/search?keyword=女子牵大型犬吓到小孩+家长欲砸狗)
 1. [侯友宜和柯文哲 谁肯做“副手”](https://so.toutiao.com/search?keyword=侯友宜和柯文哲+谁肯做“副手”)
-1. [浙江国祥为何成烫手山芋](https://so.toutiao.com/search?keyword=浙江国祥为何成烫手山芋)
 1. [合肥：宠物狗出门不拴绳一律捕捉](https://so.toutiao.com/search?keyword=合肥：宠物狗出门不拴绳一律捕捉)
 1. [碧桂园辟谣“创始人父女或已离境”](https://so.toutiao.com/search?keyword=碧桂园辟谣“创始人父女或已离境”)
 1. [以军完成对加沙地面进攻准备工作](https://so.toutiao.com/search?keyword=以军完成对加沙地面进攻准备工作)
@@ -105,7 +123,6 @@
 1. [碧桂园创始人杨国强再露面](https://so.toutiao.com/search?keyword=碧桂园创始人杨国强再露面)
 1. [云南坠落电梯是否超载？商户发声](https://so.toutiao.com/search?keyword=云南坠落电梯是否超载？商户发声)
 1. [美大使演讲时众多与会者背过身抗议](https://so.toutiao.com/search?keyword=美大使演讲时众多与会者背过身抗议)
-1. [于和伟晒自拍“显摆”手机](https://so.toutiao.com/search?keyword=于和伟晒自拍“显摆”手机)
 1. [台风“三巴”在海南东方沿海登陆](https://so.toutiao.com/search?keyword=台风“三巴”在海南东方沿海登陆)
 1. [“跳河者”的网事和往事](https://so.toutiao.com/search?keyword=“跳河者”的网事和往事)
 1. [内马尔前十字韧带和半月板撕裂](https://so.toutiao.com/search?keyword=内马尔前十字韧带和半月板撕裂)
@@ -157,7 +174,6 @@
 1. [地图看“一带一路”朋友圈扩大速度](https://so.toutiao.com/search?keyword=地图看“一带一路”朋友圈扩大速度)
 1. [兽医称从业10年仍害怕罗威纳犬](https://so.toutiao.com/search?keyword=兽医称从业10年仍害怕罗威纳犬)
 1. [孩子被狗追逐怎么办](https://so.toutiao.com/search?keyword=孩子被狗追逐怎么办)
-1. [专家：美国股市正处于历史性泡沫中](https://so.toutiao.com/search?keyword=专家：美国股市正处于历史性泡沫中)
 1. [日本下水新潜艇比法国核潜艇还大](https://so.toutiao.com/search?keyword=日本下水新潜艇比法国核潜艇还大)
 1. [中国最大罗威纳犬舍遭网暴](https://so.toutiao.com/search?keyword=中国最大罗威纳犬舍遭网暴)
 1. [加沙医院遭袭已致700人死亡](https://so.toutiao.com/search?keyword=加沙医院遭袭已致700人死亡)
